Added OMAP and ASCT+B sheet config routes to provide reference data to the ASCT+B Reporter
